[package]
name = "hello_langchain"
version = "0.0.1"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2021"

[[bin]]
name = "openai"
path = "src/openai.rs"

[[bin]]
name = "ollama"
path = "src/ollama.rs"

[[bin]]
name = "ollama-translate"
path = "src/ollama-translate.rs"

[dependencies]
anyhow = "1.0.96"
dotenvy = "0.15.7"
env_logger = "0.11.5"
langchain-rust = { version = "4.6.0", features = ["ollama"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.139"
