[package]
name = "hello_langchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openai"
path = "src/openai.rs"

[[bin]]
name = "ollama"
path = "src/ollama.rs"

[[bin]]
name = "ollama-translate"
path = "src/ollama-translate.rs"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
env_logger = "0.11.8"
langchain-rust = { version = "4.6.0", features = ["ollama"] }
log = "0.4.27"
futures = "0.3.31"
serde_json = "1.0.140"
